# nbs_tui

./: .gitignore  Cargo.toml
src/: editor.rs  event.rs  main.rs  noteblock_widget.rs  parsers.rs
