[package]
name = "nbs_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.20.1" }
nom = "7.1.3"
symphonia-format-ogg = "0.5.3"
rodio = "0.17.1"
im = "15.1.0"